refactor: 예약 가능한 객실 조회 로직 수정